devel
-----

* COR-13: New ArangoSearch consolidation policy
  - new algorithm that uses maxSkewThreshold and minDeletionRatio
  - Bumped ArangoSearch

* The query explainer now displays the vector index used by EnumerateNearVectoNode.

* FE-636: bump webpack-dev-middleware from 5.3.3 to 5.3.4.

* FE-636: bump braces from 3.0.2 to 3.0.3.

* COR-8: Added new metrics to track deployment metadata:
  - `arangodb_metadata_number_of_databases`: Total number of databases
  - `arangodb_metadata_number_of_collections`: Total number of collections
  - `arangodb_metadata_number_of_shards`: Total number of shards (cluster only)
  These metrics are exposed on coordinators (in cluster mode) and single servers,
  providing visibility into the overall size and scale of the deployment.

* Enforce that a license with a baked in deployment ID can only be applied
  to a deployment with that ID.

* Export the license grant in `GET /_admin/license` in clear JSON but without
  signature in the `grant` attribute.

* COR-5: Added resource metrics effective CPU cores, effective physical
  memory, and cgroup version detection.

* Add `storedValues` support for vector indexes. This allows storing additional
  document fields directly in the vector index, enabling optimized filtered
  vector queries when all filter attributes are covered by stored values. The
  query optimizer can now avoid fetching full documents when all required
  fields are available in the index.

* Ensure the js/node/package.json and js/node/package-lock.json have correct
  versions of the included node packages.

* Fix Swagger UI missing generated data.

* Updated ArangoDB Starter to v0.19.14.

* Ignore flag --cluster.upgrade on DBservers, since it only concerns coordinators.
  This fixes a clash with --database.auto-upgrade which can lead to problems during
  an upgrade on DBservers.

* Rebuilt included rclone v1.65.2 with go1.24.9 and non-vulnerable
  dependencies.

* Update tzdata as of 05.11.2025.
