@@ -233,13 +233,45 @@ AstNode* getApproxNearAttributeExpression(
 }
 
 std::vector<std::shared_ptr<Index>> getVectorIndexes(
-    auto& enumerateCollectionNode) {
+    auto& enumerateCollectionNode, IndexHint const& indexHint) {
+  auto const& indexes = enumerateCollectionNode->collection()->indexes();
+  if (indexHint.isSimple() && indexHint.isForced()) {
+    auto& idxNames = indexHint.candidateIndexes();
+    for (auto const& idxName : idxNames) {
+      if (auto foundHintedIndexIt = std::ranges::find_if(
+              indexes,
+              [&idxName](const auto& elem) { return elem->name() == idxName; });
+          foundHintedIndexIt != indexes.end()) {
+        return {*foundHintedIndexIt};
+      } else {
+        THROW_ARANGO_EXCEPTION_MESSAGE(
+            TRI_ERROR_QUERY_FORCED_INDEX_HINT_UNUSABLE,
+            std::format("Could not use hinted vector index `{}`", idxName));
+      }
+    }
+  }
+
   std::vector<std::shared_ptr<Index>> vectorIndexes;
-  auto indexes = enumerateCollectionNode->collection()->indexes();
   std::ranges::copy_if(
       indexes, std::back_inserter(vectorIndexes), [](auto const& elem) {
         return elem->type() == Index::IndexType::TRI_IDX_TYPE_VECTOR_INDEX;
       });
+
+  // Reorder indexes
+  if (indexHint.isSimple()) {
+    auto& idxNames = indexHint.candidateIndexes();
+    auto currentIt = vectorIndexes.begin();
+    for (auto const& idxName : idxNames) {
+      if (auto foundHintedIndexIt = std::ranges::find_if(
+              vectorIndexes,
+              [&idxName](const auto& elem) { return elem->name() == idxName; });
+          foundHintedIndexIt != vectorIndexes.end()) {
+        auto oldIt = currentIt;
+        std::iter_swap(oldIt, foundHintedIndexIt);
+        currentIt++;
+      }
+    }
+  }
 
   return vectorIndexes;
 }
@@ -261,7 +293,7 @@ std::vector<std::shared_ptr<Index>> getVectorIndexes(
 //
 // Filter Pushdown:
 // When a filter expression is detected, the rule triggers
-// pushFilterIntoEnumerateNear which will handle the filter expressing usage
+// pushFilterIntoEnumerateNear which will handle the filter expression usage
 // along with vector index.
 void useVectorIndexRule(Optimizer* opt, std::unique_ptr<ExecutionPlan> plan,
                         OptimizerRule const& rule) {
@@ -275,7 +307,10 @@ void useVectorIndexRule(Optimizer* opt, std::unique_ptr<ExecutionPlan> plan,
         ExecutionNode::castTo<EnumerateCollectionNode*>(node);
 
     // check if there are vector indexes on collection
-    auto const vectorIndexes = getVectorIndexes(enumerateCollectionNode);
+    auto const& colNodeHints = enumerateCollectionNode->hint();
+    // We will prioritize the hinted indexes
+    auto const vectorIndexes =
+        getVectorIndexes(enumerateCollectionNode, colNodeHints);
     if (vectorIndexes.empty()) {
       continue;
     }
